vlib/v/parser/tests/closure_not_declared.out
vlib/v/parser/tests/closure_not_declared.vv:4:9: error: variable `a` from the outer scope not added to the capturing list of the closure
    2 |     a := 1
    3 |     f := fn () {
    4 |         print(a)
      |               ^
    5 |     }
    6 |     f()
